<resources>
    <string name="app_name">سام</string>
    <string name="actionbar_app_name">اپلیکیشن سام</string>
    <string name="guide">راهنمای استفاده</string>
    <string name="about">درباره</string>
    <string name="launcher_title">سام</string>
    <string name="launcher_title_desc">سامانه اطلاع رسانی مساجد</string>
    <string name="launcher_footer">کاری از: شرکت آرت استون ایرانیان</string>
    <string name="search">جستجو</string>
    <string name="settings">تنظیمات</string>
    <string name="send_consolation">ارسال پیام تسلیت</string>
    <string name="consolation_history">تاریخچه پیام</string>
    <string name="drawer_title">سامانه اطلاع رسانی مساجد</string>
    <string name="search_city">جستجوی شهر</string>
    <string name="select_city">لطفاً شهر مورد نظر خود را انتخاب نمایید.</string>
    <string name="connecting_server">در حال ارتباط با سرور</string>
    <string name="please_wait">لطفاً صبور باشید…</string>
    <string name="select_mosque">لطفاً مسجد محل برگزاری را انتخاب نمایید، در صورتی که اطلاع ندارید به گام بعدی بروید:</string>
    <string name="search_mosque">جستجوی مسجد</string>
    <string name="address">آدرس</string>
    <string name="search_obit_desc">مراسم مورد نظر خود را از طریق جستجوی نام فرد مورد نظر انتخاب نمایید:</string>
    <string name="search_obit">جستجوی مراسم</string>
    <string name="obit_type">نوع مراسم</string>
    <string name="step_mosque_selection">گام ۱: انتخاب مسجد</string>
    <string name="step_obit_selection">گام ۲: انتخاب مراسم</string>
    <string name="skip">رد شو</string>
    <string name="step_template_selection">گام ۳: انتخاب الگوی پیام</string>
    <string name="select_template">لطفاً الگوی مورد نظر خود را از لیست زیر انتخاب نمایید:</string>
    <string name="price">قیمت</string>
    <string name="price_unit">ریال</string>
    <string name="operation_failed">خطا در انجام عملیات</string>
    <string name="step_template_fields">گام ۴: محتوای پیام تسلیت</string>
    <string name="fill_template_fields">جهت نمایش پیام تسلیت، لطفاً مشخصات زیر را با توجه به مثال ها تعیین نمایید:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="customer_info_desc">لطفاً مشخصات زیر را تکمیل فرمایید:</string>
    <string name="customer_info">اطلاعات کاربری</string>
    <string name="fullname">نام و نام خانوادگی</string>
    <string name="cellphone_number">شماره همراه</string>
    <string name="fullname_desc">نام شما در پیام ها نمایش داده نخواهد شد.</string>
    <string name="cellphone_number_desc">جهت ارسال پیامک های اطلاع رسانی</string>
    <string name="ok">انجام شد</string>
    <string name="user">کاربر</string>
    <string name="step_preview">پیش نمایش</string>
    <string name="step_preview_desc">
        کاربر گرامی، پیام شما در سیستم ثبت گردید و پس از اتمام مراحل پرداخت در سریع ترین زمان مناسب نمایش خواهد یافت، جهت رفتن به سایت بانک برای پرداخت مبلغ دکمه (تأیید و پرداخت) در پایین صفحه را فشار دهید. نحوه نمایش پیام شما در نمایشگر به صورت زیر خواهد بود:
    </string>
    <string name="confirm_and_pay">تأیید و پرداخت مبلغ</string>
    <string name="consolation_history_title">تاریخچه پیام های تسلیت ارسالی</string>
    <string name="obit">مراسم</string>
    <string name="cost">هزینه</string>
    <string name="payment_failed">پرداخت ناموفق</string>
    <string name="payment_succeeded">پرداخت شده</string>
    <string name="payment_pending">منتظر پرداخت</string>
    <string name="status">وضعیت</string>
    <string name="consolation_canceled">لغو شده</string>
    <string name="consolation_displayed">نمایش یافته</string>
    <string name="consolation_pending">منتظر تأیید</string>
    <string name="consolation_confirmed">تأیید شده</string>
    <string name="tracking">رهگیری پیام</string>
    <string name="track_consolation_step_header">رهگیری پیام تسلیت</string>
    <string name="track_consolation_step_desc">لطفاً کد رهگیری دریافتی را وارد نمایید:</string>
    <string name="tracking_number">کد رهگیری</string>
    <string name="msg_no_result_found">موردی یافت نشد</string>
    <string name="welcome_text">به اپلیکیشن سامانه اطلاع رسانی مساجد (سام) خوش آمدید.</string>
    <string name="city">شهر</string>
    <string name="obit_type_chehelom">روز چهلم</string>
    <string name="obit_type_haftom">روز هفتم</string>
    <string name="obit_type_salgard">سالگرد</string>
    <string name="obit_type_sevom">روز سوم</string>
    <string name="obit_type_tarhim">مجلس ترحیم</string>
    <string name="obit_type_yadbood">شام غریبان</string>
    <string name="obit_type_sayer">متفرقه</string>
    <string name="payment_verified">تأیید شده نهایی</string>
    <string name="payment_reversed">بازگشت به حساب</string>
    <string name="payment_free">رایگان</string>
    <string name="step_preview_desc_free">کاربر گرامی، پیام شما در سیستم ثبت گردید و در سریع ترین زمان مناسب نمایش خواهد یافت (بصورت رایگان). نحوه نمایش پیام شما در نمایشگر به صورت زیر خواهد بود:</string>
    <string name="back">بازگشت</string>
    <string name="amount_to_pay">مبلغ قابل پرداخت</string>
    <string name="finish">پایان</string>
    <string name="msg_update_not_title">بروزرسانی اپلیکیشن سام</string>
    <string name="msg_update_not_content">نسخه جدید اپلیکیشن سام اکنون در دسترس است، برای بروزرسانی کلیک کنید.</string>
    <string name="msg_general_error_message">خطایی رخ داده است، لطفاً مجددا تلاش کنید.</string>
    <string name="confirm">تأیید</string>
    <string name="from_hour">از ساعت</string>
    <string name="to_hour">الی</string>
    <string name="msg_no_item_found">موردی جهت نمایش یافت نشد.</string>
    <string name="back_again_to_exit">برای بستن برنامه، دکمه بازگشت را دوباره فشار دهید.</string>
    <string name="related_obits_selection_title">مراسمات مرتبط</string>
    <string name="related_obits_selection_message">در صورتی که تمایل دارید پیام شما در سایر مراسمات مرتبط، با تخفیف ویژه نمایش یابد، مراسمات مورد نظر خود را انتخاب نمایید:</string>
    <string name="next_step">مرحله بعدی</string>
    <string name="hour">ساعت</string>
</resources>
