<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/AppTheme.AlertTitle"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/related_obits_selection_title"/>

    <TextView
        style="@style/AppTheme.TextView.Comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/widget_margin"
        android:paddingBottom="@dimen/widget_margin"
        android:paddingStart="@dimen/container_margin"
        android:paddingEnd="@dimen/container_margin"
        android:text="@string/related_obits_selection_message"/>

    <LinearLayout
        android:id="@+id/choices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/container_margin" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next_step"
        style="@style/AppTheme.AlertSingleButton"/>

</LinearLayout>