<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ramanco.samandroid.fragments.ObitSelectionFragment"
    android:layout_margin="@dimen/activity_margin">

    <LinearLayout
        android:id="@+id/ly_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <TextView
            style="@style/AppTheme.TextView.StepHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/step_obit_selection" />

        <TextView
            style="@style/AppTheme.TextView.Comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_obit_desc" />

        <com.rey.material.widget.EditText
            android:id="@+id/et_search"
            style="@style/AppTheme.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/widget_margin_half"
            android:hint="@string/search_obit" />

    </LinearLayout>

    <ListView
        android:id="@+id/lv_items"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ly_search"
        android:layout_marginTop="@dimen/widget_margin"/>

</RelativeLayout>
