<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_margin"
    tools:context=".fragments.TrackFragment">

    <LinearLayout
        android:id="@+id/ly_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <TextView
            style="@style/AppTheme.TextView.StepHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/track_consolation_step_header" />

        <TextView
            style="@style/AppTheme.TextView.Comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/track_consolation_step_desc" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/widget_margin_half">

            <com.rey.material.widget.EditText
                android:id="@+id/et_tracking_number"
                style="@style/AppTheme.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/btn_search"
                android:hint="@string/tracking_number"
                android:inputType="number" />

            <ImageButton
                android:id="@+id/btn_search"
                style="@style/AppTheme.FormImageButton.Search"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="@dimen/widget_margin_half"
                android:layout_marginTop="@dimen/widget_margin_max" />

        </RelativeLayout>

    </LinearLayout>

    <ListView
        android:id="@+id/lv_items"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ly_search"
        android:layout_marginTop="@dimen/widget_margin" />

</RelativeLayout>
