<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ramanco.samandroid.fragments.PreviewStepFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btn_confirm">

        <LinearLayout
            android:id="@+id/ly_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_margin"
                android:orientation="vertical">

                <TextView
                    style="@style/AppTheme.TextView.StepHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/step_preview" />

                <TextView
                    android:id="@+id/tv_preview_desc"
                    style="@style/AppTheme.TextView.Comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/step_preview_desc" />

            </LinearLayout>

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/img_preview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_margin"
                android:layout_marginStart="@dimen/activity_margin"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                app:riv_corner_radius="16dp" />

            <TextView
                android:id="@+id/tv_amount_to_pay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/widget_margin" />

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btn_confirm"
        style="@style/AppTheme.BottomButton"
        android:layout_alignParentBottom="true"
        android:text="@string/confirm_and_pay" />

</RelativeLayout>
